Text alignment fixed

--- a/main.css
+++ b/main.css
@@ -10,4 +10,5 @@ li {
 img {
     height: 300px;
     width: 300px;
+    margin-left: -190px;
 }
